[package]
name = "lang2"
version = "0.1.0"
authors = ["julio <julio.grillo98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
peg = { git = "https://github.com/kevinmehall/rust-peg", branch = "master" }
lazy_static = "1.4.0"
lasso = { version = "0.5.0", features = [ "multi-threaded" ] }
